# PostTrack

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  skills-lock.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/docker/django/: entrypoint.sh
backend/src/: .env.example  manage.py
backend/src/apps/clinics/: admin.py  middleware.py
backend/src/apps/clinics/api/: __init__.py  urls.py  views.py
backend/src/apps/clinics/migrations/: 0001_initial.py  0002_remove_vetclinic_role.py  0003_alter_vetclinic_options_and_more.py  0004_clinicmembership.py
backend/src/apps/clinics/models/: __init__.py  audit_log.py  clinic.py  data_authorization.py  data_policy.py  data_treatment_acceptance.py  membership.py
backend/src/apps/clinics/serializers/: __init__.py  audit.py  clinic.py  terms.py
backend/src/apps/clinics/services/: __init__.py  audit_log.py  clinic.py  data_treatment.py
backend/src/apps/core/: models.py
backend/src/apps/core/services/: email.py  imgbb.py
backend/src/apps/monitoring/: admin.py  apps.py  tasks.py
backend/src/apps/monitoring/api/: urls.py  views.py
backend/src/apps/monitoring/migrations/: 0001_initial.py  0002_customquestion_instruction_text_and_more.py  0003_historicalreport_processing_status_and_more.py  0004_add_default_surgery_questions.py  0007_generalquestion_factor_and_more.py  (+4 more)
backend/src/apps/patients/: admin.py  tests.py
backend/src/apps/users/: admin.py  apps.py
backend/src/apps/vet/: __init__.py  apps.py  tests.py
backend/src/config/: celery.py  urls.py
backend/src/config/settings/: base.py
(+142 files in other folders)
