# backend/pyproject.toml
[project]
name = "posttrack-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies =[
    "Django>=5.0",
    "psycopg2-binary>=2.9.9",
    "django-environ>=0.11.2",
    "django-unfold>=0.22.0",
    "djangorestframework>=3.15.1",
    "django-simple-history>=3.4.0",
    "firebase-admin>=6.5.0",
    "django-cors-headers>=4.3.1",
]